--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
   "name": "paper-date-picker",
-  "version": "1.0.3",
+  "version": "1.1.1",
   "authors": [
-    "Ben Davis <bendavis78@gmail.com>"
+    "Ben Davis <bendavis78@gmail.com>",
+    "Steve Quince <squince@glgroup.com>",
+    "Amit Segal <asegal@glgroup.com>"
   ],
-  "description": "Provides a responsive date picker based on the material design spec",
+  "description": "Based on paper-date-picker by Ben Davis.  Modified to allow us to use the paper-calendar within a paper-dropdown-menu.  Provides a responsive date picker based on the material design spec",
   "keywords": [
     "web-component",
     "web-components",
