--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paper-date-picker",
-  "version": "1.1.5",
+  "version": "1.1.4",
   "description": "Provides a responsive date picker based on the material design spec",
   "main": "index.html",
   "devDependencies": {
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bendavis78/paper-date-picker.git"
+    "url": "git+https://github.com/Custom-Elements/paper-date-picker.git"
   },
   "keywords": [
     "web-component",
@@ -33,10 +33,7 @@
     "datepicker",
     "paper-date-picker"
   ],
-  "author": "Ben Davis <bendavis78@gmail.com>",
+  "author": "Steve Quince <squince@glgroup.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bendavis78/paper-date-picker/issues"
-  },
-  "homepage": "https://github.com/bendavis78/paper-date-picker#readme"
+  "homepage": "https://github.com/Custom-Elements/paper-date-picker"
 }
